--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body{
   h1{
 	font-family: 'Noto Sans TC';
 	font-style: normal;
-	font-size:24px;
+	font-size:36px;
 	text-align: center;
 	margin: 50px auto;
 
@@ -153,7 +153,7 @@ body{
     color: aliceblue;
 	border-radius: 40px;
 	margin: 0 auto;
-	font-size: 20px;
+	font-size: 24px;
 	    
 }
 
@@ -227,15 +227,16 @@ body{
 .photo-top1 img{}
 
 .photo-top1 a{
-	font-size: 20px;
+	font-size: 24px;
 	display: block;
-	width: 120px;
+	width: 150px;
 	text-align: center;
 	background-color: #0082FB;
 	color: aliceblue;
 	border-radius: 40px;
 	text-decoration: none;
-	margin-top: 80px;
+	margin-top: 68px;
+	line-height: 50px;
 	
 }
 
@@ -549,7 +550,7 @@ text-decoration: none;
 
 
 .product-container{
-	padding: 0 15px;
+	
 	margin: 50px auto;
 	display: flex;
     flex-wrap: wrap;
@@ -761,12 +762,15 @@ text-decoration: none;
 
 }
 
+
 .down-border{
-	width: 408px;
+	width: 400px;
 	border-bottom: 1px solid black;
 	margin-bottom: 20px;
 
 }
+
+
 .info-down h2{
 	
 	font-family: 'Noto Sans TC';
@@ -816,7 +820,7 @@ text-decoration: none;
 	text-decoration: none;
 	margin-top: 10px;
 	text-align: center;
-	border-radius:20px;
+	border-radius:10px;
 
 }
 
