--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,7 @@ body{
 }
 .logo-container img{
 	margin-bottom: 30px;
+	height: 50px;
 }
 
 .logo-container li{
@@ -393,9 +394,12 @@ body{
 
 .info-right img{
 	width: 140px;
+	margin-top: 20px;
 }
 .info-right ul{
 	display: flex;
+	margin-top: 45px;
+	
 }
 
 .info-right li{
