--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("reset.css");
 
 body{
-	font-family: 'Noto Sans TC';
+	font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.6;
 	background-color:#CAF1FF;
 	
@@ -78,7 +78,7 @@ body{
 
   
   h1{
-	font-family: 'Noto Sans TC';
+	font-family: 'Noto Sans TC', sans-serif;
 	font-style: normal;
 	font-size:36px;
 	text-align: center;
