--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,79 @@
 @import url("reset.css");
 
-body{
+body {
 	font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.6;
-	background-color:#CAF1FF;
-	
+	background-color: #CAF1FF;
+
 }
 
-.container_header{
+.container_header {
 	background-color: white;
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 12;
+	position: sticky;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 12;
 	padding: 1rem 4rem 1rem;
 	box-shadow: 0 0.25rem 0.75rem rgba(2, 32, 56, 0.24);
 }
 
-.top{
+.top {
 	display: flex;
-	
 	align-items: center;
 	justify-content: space-between;
 	position: relative;
-	
-	
 
-	
 }
-.top img{
+
+.top img {
 	height: 40px;
 	padding: 10px 0 0 50px;
 }
 
-.top ul{
+.top ul {
 	display: flex;
 	margin-right: 80PX;
-  }
+}
 
-  .top li{
+.top li {
 	margin-left: 50px;
-  }
+}
 
 
-  .top li a{
+.top li a {
 	font-family: 'Noto Sans TC';
 	display: block;
 	text-align: center;
 	text-decoration: none;
 	font-size: 24px;
-	
-  }
 
- /* ------------產品下拉是選單------------- */
+}
 
-
+/* ------------產品下拉是選單------------- */
 
 
 
-  /* ------------右上3個ICON 修改------------- */
-  .btn-default{
+
+
+/* ------------右上3個ICON 修改------------- */
+.btn-default {
 	display: inline-block;
 	color: #0082FB;
+}
 
-  }
-
-
-
-
-/*       banner主圖          */
-  .wrapper a img{
+/*  -------------- banner主圖   --------  */
+.wrapper a img {
 	width: 100%;
 	margin: 0 auto;
 	margin-bottom: 50px;
-  }
+}
 
-  
-  h1{
+
+h1 {
 	font-family: 'Noto Sans TC', sans-serif;
 	font-style: normal;
-	font-size:36px;
+	font-size: 36px;
 	text-align: center;
 	margin: 50px auto;
 
@@ -88,44 +81,44 @@ body{
 
 
 
+/* -------  優惠活動  -------   */
 
-/*         優惠活動          */
 
-
-.nav-pr{
+.nav-pr {
 	width: 100%;
 	display: flex;
-    justify-content: center;
+	justify-content: center;
 	margin-bottom: 50px;
-	
+
 }
-.nav-pr img{
+
+.nav-pr img {
 	width: 640px;
 	margin-left: 10px;
-	
+
 }
 
-.new-arrival{}
+.new-arrival {}
 
-.new-arrival-photo{
+.new-arrival-photo {
 	padding-bottom: 50px;
 }
 
-.new-arrival ul{
+.new-arrival ul {
 	max-width: 1250px;
 	margin: 0 auto;
 	display: flex;
-
-	
 }
-.new-arrival ul li{
-	
+
+.new-arrival ul li {
+
 	margin: 0 10px;
 	flex-grow: 1;
 }
-.new-arrival ul li img{}
 
-.new-arrival ul li h3{
+.new-arrival ul li img {}
+
+.new-arrival ul li h3 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	text-align: center;
@@ -133,44 +126,46 @@ body{
 	margin-bottom: 10px;
 
 }
-.new-arrival ul li p{
+
+.new-arrival ul li p {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	text-align: center;
 	font-size: 20px;
-	color:#0082FB;
+	color: #0082FB;
 	margin-bottom: 10px;
 }
-.new-arrival ul li a{
+
+.new-arrival ul li a {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	display: block;
-    width: 150px;
-    line-height: 50px;
-    background-color: #0082FB;
-    text-align: center;
-    text-decoration: none;
-    color: aliceblue;
+	width: 150px;
+	line-height: 50px;
+	background-color: #0082FB;
+	text-align: center;
+	text-decoration: none;
+	color: aliceblue;
 	border-radius: 40px;
 	margin: 0 auto;
 	font-size: 24px;
-	    
+
 }
 
 
 
-/*     熱賣商品   */
+/*  -----------  熱賣商品 -----------  */
 
 
-.bestseller-top{
+.bestseller-top {
 
 	width: 1202px;
-	
 	margin: 0 auto;
 	display: flex;
 }
-.wrapper-left{
-	
+
+.wrapper-left {
+
 	width: 513px;
 	height: 476px;
 	display: flex;
@@ -180,36 +175,38 @@ body{
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.photo-top{
-		
-}
-.photo-top ul{
+.photo-top {}
+
+.photo-top ul {
 	text-align: center;
 	margin: 0 auto;
 }
-.photo-top img{
+
+.photo-top img {
 	width: 268px;
 	margin: 15px;
 }
-.photo-top h2{
+
+.photo-top h2 {
 	font-size: 24px;
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
-.photo-top h3{
+
+.photo-top h3 {
 	font-size: 24px;
 }
 
 
 
-/*  4個icon區域  */
-.photo-top1{
-	
+/* ---- 4個icon區域 ---- */
+.photo-top1 {
+
 	padding: 40px;
-	
+
 }
 
-.photo-top1 ul{
+.photo-top1 ul {
 	flex-wrap: wrap;
 	display: flex;
 	text-align: center;
@@ -217,16 +214,18 @@ body{
 	align-items: center;
 	margin-top: 60px;
 }
-.photo-top1 li{
+
+.photo-top1 li {
 	margin: 4px;
 }
 
-.photo-top1 p{
-	font-size: 14px;	
+.photo-top1 p {
+	font-size: 14px;
 }
-.photo-top1 img{}
 
-.photo-top1 a{
+.photo-top1 img {}
+
+.photo-top1 a {
 	font-size: 24px;
 	display: block;
 	width: 150px;
@@ -237,97 +236,95 @@ body{
 	text-decoration: none;
 	margin-top: 68px;
 	line-height: 50px;
-	
+
 }
 
-.photo-top ul li{}
+.photo-top ul li {}
 
 
 
-/*  右邊熱賣6張小圖區*/
-.wrapper-right{
-	
+/*  -----------右邊熱賣6張小圖區-----------*/
+.wrapper-right {
+
 	flex-grow: 1;
 	width: 650px;
 }
 
 
-.wrapper-right ul{
+.wrapper-right ul {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 
 }
 
-.wrapper-right li{
+.wrapper-right li {
 	background-color: white;
 	border: 1px solid #D9D9D9;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
 	width: 200px;
 	height: 230px;
 	margin-bottom: 15px
 }
-.wrapper-right li a{
+
+.wrapper-right li a {
 	text-decoration: none;
 }
 
 
-.wrapper-right li h3{
+.wrapper-right li h3 {
 	font-size: 14px;
 	margin: 5px 5px;
 }
-.wrapper-right li h4{
+
+.wrapper-right li h4 {
 	font-size: 12px;
 	margin: 5px 5px;
 
 }
-.wrapper-right li p{
+
+.wrapper-right li p {
 	font-size: 14px;
 	color: #0082FB;
 	margin: 5px 5px;
-
 }
 
-.bestseller-down{
-	
+.bestseller-down {
 	width: 1202px;
-	
 	margin: 0 auto;
 	display: flex;
 }
 
-.video-3{
+.video-3 {
 	display: flex;
-    justify-content: center;
+	justify-content: center;
 	margin-bottom: 50px;
 }
 
-.video-3 ul{
+.video-3 ul {
 	display: flex;
-    justify-content: center;
+	justify-content: center;
 
 }
-.video-3 li{
+
+.video-3 li {
 	width: 400px;
 	margin-left: 10px;
 }
 
 
-.bi-arrow-up-circle{
+.bi-arrow-up-circle {
 	font-size: 40px;
 	position: fixed;
 	right: 10px;
 	z-index: 99;
 	bottom: 50px;
-	
-	
 }
 
 
 /* -----------footer-------------- */
 
-.container_footer{
+.container_footer {
 	background-color: #0082FB;
 	margin: 0 auto;
 	display: flex;
@@ -338,31 +335,24 @@ body{
 
 
 
-.info-right ul{
+.info-right ul {
 	display: flex;
 	justify-content: space-around;
-	
-	
+
 }
 
 
-
-
-.logo-container ul{
+.logo-container ul {
 	line-height: 2;
-	
-	
 
 }
-.logo-container img{
+
+.logo-container img {
 	margin-bottom: 30px;
 	height: 50px;
 }
 
-.logo-container li{
-
-	
-}
+.logo-container li {}
 
 .container_footer .logo-container a {
 	color: white;
@@ -377,41 +367,45 @@ body{
 
 
 /* ---------------footer-icon修改--------- */
-.btn1{
+.btn1 {
 	display: block;
-	color:white;
-	
+	color: white;
+
 }
+
 /* ---------------關於我們-icon修改--------- */
-.btn2{
+.btn2 {
 	display: flex;
 
 
 }
-.btn2 h3{
+
+.btn2 h3 {
 	margin-left: 10px;
 }
 
-.info-right img{
+.info-right img {
 	width: 140px;
 	margin-top: 20px;
 }
-.info-right ul{
+
+.info-right ul {
 	display: flex;
 	margin-top: 45px;
-	
+
 }
 
-.info-right li{
+.info-right li {
 	margin-right: 40px;
 }
-.info-right li a{
+
+.info-right li a {
 	text-decoration: none;
-	
+
 }
 
 
-.info-right li h2{
+.info-right li h2 {
 	color: white;
 	font-size: 24px;
 	font-family: 'Noto Sans TC';
@@ -421,22 +415,21 @@ body{
 	text-decoration: none;
 }
 
-.info-right li h3{
+.info-right li h3 {
 	color: white;
 	font-size: 16px;
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	margin: 5px auto;
-
-
 }
 
-.ref{
+.ref {
 	background-color: #092C4C;
 	text-align: center;
 	padding: 0.75rem 0;
 }
-.ref p{
+
+.ref p {
 	color: white;
 	font-family: 'Noto Sans TC';
 	font-style: normal;
@@ -444,74 +437,60 @@ body{
 
 }
 
-
-
-
-
-
-
 /* ---------------優惠活動分頁--------- */
-.wrapper-promo{}
+.wrapper-promo {}
 
-.banner img{
+.banner img {
 	width: 100%;
 	margin: 0 auto;
 }
 
-.nav-lavel{
+.nav-lavel {}
 
-
-}
-
-.label-3{
-	
+.label-3 {
 	float: left;
 	margin-left: 100px;
-
 }
 
-.label-3 a{
-font-size: 16px;
-font-family: 'Noto Sans TC';
-font-style: normal;
-text-decoration: none;
-
+.label-3 a {
+	font-size: 16px;
+	font-family: 'Noto Sans TC';
+	font-style: normal;
+	text-decoration: none;
 }
-.label-3 img{
+
+.label-3 img {
 	width: 10px;
 	margin: 0 10px;
 }
 
 
-.label-4{
+.label-4 {
 	float: right;
-
-	
-
 }
-.label-4 span{
-	margin-right: 10px; 
+
+.label-4 span {
+	margin-right: 10px;
 }
-.promo-main{
+
+.promo-main {
 	width: 100%;
 	margin: 50px auto;
-
 }
 
-.promo-in{
+.promo-in {
 	max-width: 1190px;
 	margin: 0 auto;
-	
-	
-
 }
-.promo-in ul{
+
+.promo-in ul {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	
+
 }
-.promo-in li{
+
+.promo-in li {
 	width: 357px;
 	height: 307px;
 	border: 1px solid black;
@@ -520,18 +499,21 @@ text-decoration: none;
 	margin: 20px auto;
 	text-align: center;
 	background-color: white;
-	
+
 }
-.promo-in ul li img{
+
+.promo-in ul li img {
 	width: 357px;
 }
-.promo-in ul li h3{
+
+.promo-in ul li h3 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 24px;
 	margin-top: 10px;
 }
-.promo-in ul li a{
+
+.promo-in ul li a {
 
 	font-size: 16px;
 	display: block;
@@ -541,7 +523,6 @@ text-decoration: none;
 	text-decoration: none;
 	margin: 0 auto;
 	margin-top: 10px;
-
 
 }
 
@@ -553,46 +534,47 @@ text-decoration: none;
 
 
 
-.product-container{
-	
+.product-container {
+
 	margin: 50px auto;
 	display: flex;
-    flex-wrap: wrap;
+	flex-wrap: wrap;
 	width: 1400px;
 }
 
-.product-list{
+.product-list {
 	display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    width: 100%;
-    height: auto;
+	flex-wrap: wrap;
+	margin: auto;
+	width: 100%;
+	height: auto;
 }
-.product-list span{
+
+.product-list span {
 	font-size: 24px;
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	border-bottom: 1px solid black;
 }
 
-.side-left li{
+.side-left li {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 16px;
 	color: #737373;
 }
 
-.side-pd{
+.side-pd {
 	padding: 15px;
 	box-sizing: border-box;
-
 }
-.side-pd1{
+
+.side-pd1 {
 	padding: 15px;
 	box-sizing: border-box;
-
 }
-.side-pd1 a{
+
+.side-pd1 a {
 
 	display: block;
 	width: 50px;
@@ -601,65 +583,68 @@ text-decoration: none;
 	text-decoration: none;
 	text-align: center;
 	margin-top: 5px;
-
 }
 
-.side-pd1 ul{
+.side-pd1 ul {
 	display: flex;
 	justify-content: center;
-	
+
 }
-.side-pd1 ul li{
+
+.side-pd1 ul li {
 	flex-grow: 1;
 }
-.search{
+
+.search {
 	width: 80px;
 }
 
-.product-set{
-	max-width:  1000px;
+.product-set {
+	max-width: 1000px;
 	margin: 0 auto;
 
 }
 
-.product-set ul{
-	
+.product-set ul {
+
 	display: flex;
-    flex-wrap: wrap;
-	justify-content:space-between;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
-.product-set li{
+
+.product-set li {
 	background-color: white;
 	border: 1px solid black;
 	border-radius: 20px;
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 	text-align: center;
 	margin-bottom: 40px;
-	
-		
+
 }
-.product-set li a{
+
+.product-set li a {
 	text-decoration: none;
 
 }
 
-.product-set img{
+.product-set img {
 	width: 100%;
 }
 
-.page-main{
+.page-main {
 	width: 100%;
-    display: flex;
+	display: flex;
 }
 
-.page-set{
+.page-set {
 	margin: auto;
 }
-.page-set a{
+
+.page-set a {
 	color: black;
-    float: left;
-    padding: 8px 20px;
-    text-decoration: none;
+	float: left;
+	padding: 8px 20px;
+	text-decoration: none;
 }
 
 
@@ -667,36 +652,36 @@ text-decoration: none;
 /* ---------------購物說明--------- */
 
 
-.side-pd li{
+.side-pd li {
 	margin-bottom: 10px;
 }
 
-.side-pd a{
+.side-pd a {
 	margin-left: 10px;
 	text-decoration: none;
-	
+
 }
 
-.info-set{
-	max-width:  1000px;
+.info-set {
+	max-width: 1000px;
 	margin: 0 auto;
 }
 
-.info-set ul{
+.info-set ul {
 	background-color: white;
 	border: 1px solid black;
 	border-radius: 20px;
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 	padding-left: 50px;
 	padding-bottom: 40px;
-	
-    
 }
-.info-set li{
+
+.info-set li {
 	margin-bottom: 10px;
 
 }
-.info-set li h1{
+
+.info-set li h1 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 36px;
@@ -704,25 +689,24 @@ text-decoration: none;
 	margin-bottom: 10px;
 
 }
-.info-bottomline{
-	width: 805px;
+
+.info-bottomline {
+	width: 935px;
 	border-bottom: 1px solid black;
 }
 
-.info-set li h2{
+.info-set li h2 {
 	margin-bottom: 10px;
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 24px;
 }
 
-.info-set li h3{
+.info-set li h3 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
-	font-size:16px;
-	color:#7F7F7F;
-	
-
+	font-size: 16px;
+	color: #7F7F7F;
 
 }
 
@@ -731,34 +715,34 @@ text-decoration: none;
 /* ---------------門市據點--------- */
 
 
-.loc-main{
+.loc-main {
 	width: 1200px;
 	margin: 50px auto;
 	background-color: white;
 	border: 1px solid black;
 	border-radius: 20px;
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
 
 
 /* -------------地圖區域--------- */
 
-.map-top{
+.map-top {
 	margin: 0 auto;
-	
+
 }
-.map-top iframe{
+
+.map-top iframe {
 	width: 1200px;
-	border-radius: 20px 20px 0 0 ;
+	border-radius: 20px 20px 0 0;
 
 }
-
 
 
 
 /* -------------關於我們下半部--------- */
 
-.info-down{
+.info-down {
 	display: flex;
 	justify-content: space-around;
 	padding: 0 30px;
@@ -767,7 +751,7 @@ text-decoration: none;
 }
 
 
-.down-border{
+.down-border {
 	width: 400px;
 	border-bottom: 1px solid black;
 	margin-bottom: 20px;
@@ -775,27 +759,26 @@ text-decoration: none;
 }
 
 
-.info-down h2{
-	
+.info-down h2 {
+
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 24px;
 
 }
-.info-down h3{
+
+.info-down h3 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 16px;
-	
+
 
 }
 
 /* ---------------公司資訊右邊--------- */
-.info-downright{
-	
-}
+.info-downright {}
 
-.info-downright ul{
+.info-downright ul {
 	display: flex;
 	flex-direction: column;
 
@@ -805,17 +788,17 @@ text-decoration: none;
 
 /* ---------------留言給我們左邊--------- */
 
-.info-downleft{
+.info-downleft {
 	margin-right: 50px;
 }
-.info-downleft ul{
+
+.info-downleft ul {
 	width: 400px;
 }
-.info-downleft li{
-	
-}
 
-.info-downleft li a{
+.info-downleft li {}
+
+.info-downleft li a {
 	font-size: 16px;
 	display: block;
 	width: 100%;
@@ -824,82 +807,79 @@ text-decoration: none;
 	text-decoration: none;
 	margin-top: 10px;
 	text-align: center;
-	border-radius:10px;
+	border-radius: 10px;
 
 }
 
-.down-border1{
+.down-border1 {
 	width: 600px;
 	border-bottom: 1px solid black;
 	margin-bottom: 20px;
 
 }
 
-.info-downleft textarea{
+.info-downleft textarea {
 	width: 100%;
 
 }
-input{
+
+input {
 	width: 100%;
 }
 
 
-textarea{
+textarea {
 	overflow: auto;
 	font-size: 100%;
-    line-height: 1.15;
-    margin: 0;
+	line-height: 1.15;
+	margin: 0;
 
 }
-F
-/* ---------------商品內文區--------- */   
 
-.pdinfo-container{
+
+/* ---------------商品內文區--------- */
+
+.pdinfo-container {
 	width: 1200px;
 	margin: 0 auto;
-	
+
 }
 
-.pd-topcontainer{
+.pd-topcontainer {
 	width: 1200px;
-    margin: 40px auto;
+	margin: 40px auto;
 	display: flex;
-	
-	
-	
-
 }
-.pd-leftimg{
+
+.pd-leftimg {
 	width: 100%;
 
 }
-.pd-leftimg ul{
+
+.pd-leftimg ul {
 	width: 375px;
 	display: flex;
 	flex-wrap: wrap;
-    justify-content: space-between;
+	justify-content: space-between;
 }
-.pd-leftimg li{
+
+.pd-leftimg li {
 	margin-top: 10px;
 }
 
-.pf-righttext{
+.pf-righttext {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	
-	
 }
-.right-info-name{
+
+.right-info-name {
 	border-bottom: 1px solid black;
 	width: 500px;
 	height: 285px;
-	
-	
-	
-
 }
-.right-info-name h2{
+
+.right-info-name h2 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-weight: 400;
@@ -907,98 +887,98 @@ F
 	line-height: 35px;
 	margin-bottom: 10px;
 }
-.bi-star-fill{
-	
-	
-}
-.right-info-name h3{
+
+.bi-star-fill {}
+
+.right-info-name h3 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 24px;
 	line-height: 35px;
 	margin-top: 10px;
-
 	color: #0082FB;
 
 }
 
-.buttom-1 a{
+.buttom-1 a {
 	font-size: 16px;
 	display: block;
-	width: 80px	;
+	width: 80px;
 	background-color: #0082FB;
 	color: aliceblue;
 	text-decoration: none;
 	margin-top: 10px;
 	text-align: center;
-	border-radius:20px;
+	border-radius: 20px;
 }
-.buttom-1{
+
+.buttom-1 {
 	margin-bottom: 10px;
 }
 
-.add{
-	
+.add {
 	width: 100px;
 }
-.add a{
-	
+
+.add a {
 	border: 1px solid black;
-    
-    padding: 0 12px;
-    text-decoration: none;
-	
+	padding: 0 12px;
+	text-decoration: none;
 }
-.add span{
+
+.add span {
 	margin: 0 8px;
 }
 
 
-.bottom-2{}
-.bottom-2 ul{
+.bottom-2 {}
+
+.bottom-2 ul {
 	display: flex;
 
 }
-.bottom-2 li{
+
+.bottom-2 li {
 	margin-right: 20px;
 	flex-grow: 1;
 }
 
-.bottom-2 li a{
+.bottom-2 li a {
 	font-size: 25px;
 	display: block;
-	width: 200px	;
+	width: 200px;
 	background-color: #0082FB;
 	color: aliceblue;
 	text-decoration: none;
 	margin-top: 10px;
 	text-align: center;
-	border-radius:20px;
+	border-radius: 20px;
 }
 
-.pd-downcontainer{
+.pd-downcontainer {
 	text-align: center;
 	margin-bottom: 50px;
 
 }
-.pd-downcontainer h1{
-	font-family: 'Noto Sans TC';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 36px;
-	line-height: 52px;
 
-}
-
-.pd-downcontainer h2{
+.pd-downcontainer h1 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 52px;
 }
-.pd-downcontainer ul li{
+
+.pd-downcontainer h2 {
+	font-family: 'Noto Sans TC';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 36px;
+	line-height: 52px;
+}
+
+.pd-downcontainer ul li {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-weight: 400;
@@ -1007,45 +987,44 @@ F
 	margin-bottom: 30px;
 }
 
-.rel-bottom{
+.rel-bottom {
 	max-width: 1300px;
 	margin: 0 auto;
 }
 
-.rel-bottom h1{
-	
-}
+.rel-bottom h1 {}
 
-.rel-bottom ul{
+.rel-bottom ul {
 	display: flex;
 	justify-content: center;
 }
 
-.rel-bottom li{
+.rel-bottom li {
 	flex: auto;
 }
-.rel-bottom li a{
+
+.rel-bottom li a {
 	text-decoration: none;
 
 }
 
-.rel-bottom li h3{
+.rel-bottom li h3 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 16px;
 
 }
-.rel-bottom li h4{
+
+.rel-bottom li h4 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 14px;
 
 }
-.rel-bottom li p{
+
+.rel-bottom li p {
 	color: #0082FB;
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 16px;
 }
-	
-
