--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body {
 	font-family: 'Noto Sans TC', sans-serif;
 	line-height: 1.6;
-	background-color: #CAF1FF;
+	background-color: #f6f6f6;
 
 }
 
@@ -31,13 +31,13 @@ a {
 }
 
 .top img {
-	height: 40px;
+	height: 51px;
 	padding: 10px 0 0 50px;
 }
 
 .top ul {
 	display: flex;
-	margin-right: 80PX;
+	
 }
 
 .top li {
@@ -52,6 +52,9 @@ a {
 	text-decoration: none;
 	font-size: 24px;
 
+}
+.top li a:hover{
+	
 }
 
 /* ------------產品下拉是選單------------- */
@@ -135,7 +138,7 @@ h1 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	text-align: center;
-	font-size: 20px;
+	font-size: 24px;
 	color: #0082FB;
 	margin-bottom: 10px;
 }
@@ -146,15 +149,23 @@ h1 {
 	display: block;
 	width: 150px;
 	line-height: 50px;
-	background-color: #0082FB;
+	background-color: #FFFFFF;
+	border: 1px solid #D9D9D9;
 	text-align: center;
 	text-decoration: none;
-	color: aliceblue;
+	color: black;
 	border-radius: 40px;
 	margin: 0 auto;
 	font-size: 24px;
 
 }
+.new-arrival ul li a:hover{
+
+	background-color:#0082FB;
+	color:white
+
+} 
+
 
 
 
@@ -176,7 +187,7 @@ h1 {
 	flex-grow: 1;
 	background: #FFFFFF;
 	border: 1px solid #D9D9D9;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	
 }
 
 .photo-top {}
@@ -224,7 +235,7 @@ h1 {
 }
 
 .photo-top1 p {
-	font-size: 14px;
+	font-size: 16px;
 }
 
 .photo-top1 img {}
@@ -265,7 +276,7 @@ h1 {
 .wrapper-right li {
 	background-color: white;
 	border: 1px solid #D9D9D9;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	
 	width: 200px;
 	height: 230px;
 	margin-bottom: 15px
@@ -277,18 +288,13 @@ h1 {
 
 
 .wrapper-right li h3 {
-	font-size: 14px;
+	font-size: 20px;
 	margin: 5px 5px;
 }
 
-.wrapper-right li h4 {
-	font-size: 12px;
-	margin: 5px 5px;
-
-}
 
 .wrapper-right li p {
-	font-size: 14px;
+	font-size: 24px;
 	color: #0082FB;
 	margin: 5px 5px;
 }
@@ -353,7 +359,7 @@ h1 {
 
 .logo-container img {
 	margin-bottom: 30px;
-	height: 50px;
+	height: 60px;
 }
 
 .logo-container li {}
@@ -449,12 +455,16 @@ h1 {
 	margin: 0 auto;
 }
 
-.nav-lavel {}
+.nav-lavel {
+	
+}
 
 .label-3 {
-	float: left;
-	margin-left: 100px;
+	margin-left: 0px;
+	margin-bottom:40px;
+	
 }
+
 
 .label-3 a {
 	font-size: 16px;
@@ -464,30 +474,24 @@ h1 {
 }
 
 .label-3 img {
-	width: 10px;
+	width: 8px;
 	margin: 0 10px;
 }
 
 
-.label-4 {
-	float: right;
-}
-
-.label-4 span {
-	margin-right: 10px;
-}
-
 .promo-main {
-	width: 100%;
+	width: 1190px;
 	margin: 50px auto;
 }
 
 .promo-in {
-	max-width: 1190px;
+	width: 1190px;
 	margin: 0 auto;
 }
 
 .promo-in ul {
+	width: 1190px;
+
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
@@ -497,9 +501,9 @@ h1 {
 .promo-in li {
 	width: 357px;
 	height: 307px;
-	border: 1px solid black;
-	border-radius: 20px;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border: 1px solid #D9D9D9;
+	
+	
 	margin: 20px auto;
 	text-align: center;
 	background-color: white;
@@ -527,6 +531,7 @@ h1 {
 	text-decoration: none;
 	margin: 0 auto;
 	margin-top: 10px;
+	line-height: 30px;
 
 }
 
@@ -544,11 +549,12 @@ h1 {
 	display: flex;
 	flex-wrap: wrap;
 	width: 1400px;
+	justify-content: space-between;
 }
 
 .product-list {
 	display: flex;
-	flex-wrap: wrap;
+	
 	margin: auto;
 	width: 100%;
 	height: auto;
@@ -564,41 +570,21 @@ h1 {
 .side-left li {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
+	font-size: 24px;
+	
+}
+.dropdown-list .no-chird{
+
 	font-size: 16px;
-	color: #737373;
-}
-
-.side-pd {
-	padding: 15px;
-	box-sizing: border-box;
-}
-
-.side-pd1 {
-	padding: 15px;
-	box-sizing: border-box;
-}
-
-.side-pd1 a {
-
-	display: block;
-	width: 50px;
-	background-color: #0082FB;
-	color: aliceblue;
 	text-decoration: none;
-	text-align: center;
-	margin-top: 5px;
+	border: none;
 }
 
-.side-pd1 ul {
-	display: flex;
-	justify-content: center;
 
+.dropdown-list .show-all-dropdown {
+	font-size: 24px;
+	margin-bottom: 10px;
 }
-
-.side-pd1 ul li {
-	flex-grow: 1;
-}
-
 .search {
 	width: 80px;
 }
@@ -613,14 +599,12 @@ h1 {
 
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .product-set li {
 	background-color: white;
-	border: 1px solid black;
-	border-radius: 20px;
-	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+	border: 1px solid #D9D9D9;
 	text-align: center;
 	margin-bottom: 40px;
 
@@ -630,8 +614,12 @@ h1 {
 	text-decoration: none;
 
 }
+.product-set li h3{
+	margin: 5px 0;
+}
 .product-set li p {
 	color: #0082FB;
+	font-size: 24px;
 }
 
 
@@ -655,6 +643,13 @@ h1 {
 	text-decoration: none;
 }
 
+.page-set a.active{
+	background-color: #0078E9;
+    color: white;
+    border-radius: 5px;
+}
+
+
 
 
 /* ---------------購物說明--------- */
@@ -669,6 +664,9 @@ h1 {
 	text-decoration: none;
 
 }
+.side-pd .dropdown-list{
+	margin: 10px 0;
+}
 
 .info-set {
 	max-width: 1000px;
@@ -680,7 +678,7 @@ h1 {
 	border: 1px solid black;
 	border-radius: 20px;
 	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
-	padding-left: 50px;
+	padding: 0 50px;
 	padding-bottom: 40px;
 }
 
@@ -727,9 +725,8 @@ h1 {
 	width: 1200px;
 	margin: 50px auto;
 	background-color: white;
-	border: 1px solid black;
-	border-radius: 20px;
-	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+	border: 1px solid #D9D9D9;
+	
 }
 
 
@@ -737,13 +734,12 @@ h1 {
 
 .map-top {
 	margin: 0 auto;
-
 }
 
 .map-top iframe {
-	width: 1200px;
-	border-radius: 20px 20px 0 0;
-
+	width: 800px;
+	margin: 0 200px;
+	
 }
 
 
