--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,11 @@ h1 {
 	line-height: 50px;
 
 }
+.photo-top1 a:hover{
+	color: #0082FB;
+	background-color: aqua;
+}
+
 
 .photo-top ul li {}
 
@@ -379,11 +384,15 @@ h1 {
 
 
 /* ---------------footer-icon修改--------- */
-.btn1 {
+.btn1 i{
 	display: block;
 	color: white;
-
+	
 }
+.btn1>::before{
+	margin-right: 5px;
+}
+
 
 /* ---------------關於我們-icon修改--------- */
 .btn2 {
@@ -689,9 +698,7 @@ h1 {
 
 .info-set ul {
 	background-color: white;
-	border: 1px solid black;
-	border-radius: 20px;
-	box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+	border: 1px solid #D9D9D9;
 	padding: 0 50px;
 	padding-bottom: 40px;
 }
@@ -906,7 +913,10 @@ textarea {
 	margin-bottom: 10px;
 }
 
-.bi-star-fill {}
+.bi-star-fill::before{
+	color: yellow;
+	margin-right: 5px;
+}
 
 .right-info-name h3 {
 	font-family: 'Noto Sans TC';
@@ -923,13 +933,18 @@ textarea {
 	font-size: 16px;
 	display: block;
 	width: 80px;
-	background-color: #0082FB;
-	color: aliceblue;
+	border: 1px solid black;
+	color: black;
 	text-decoration: none;
 	margin-top: 10px;
 	text-align: center;
-	border-radius: 20px;
 }
+.buttom-1 a:hover{
+	color: white;
+	background-color: #0082FB;
+}
+
+
 
 .buttom-1 {
 	margin-bottom: 10px;
@@ -962,7 +977,7 @@ textarea {
 	flex-grow: 1;
 }
 
-.bottom-2 li a {
+.buy-button {
 	font-size: 25px;
 	display: block;
 	width: 200px;
@@ -972,6 +987,24 @@ textarea {
 	margin-top: 10px;
 	text-align: center;
 	border-radius: 20px;
+}
+.add-cartbutton{
+	font-size: 25px;
+	text-align: center;
+	display: block;
+	width: 200px;
+	text-decoration: none;
+	color:#0082FB;
+	border:1px solid #0082FB;
+	border-radius: 20px;
+	margin-top: 10px;
+
+}
+.bottom-2 a:hover{
+
+	background-color: #86f7ff;
+	color: #0082FB;
+
 }
 
 .pd-downcontainer {
