--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,12 @@ a {
 }
 
 .top {
+	max-width: 1440px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	position: relative;
+	margin: 0 auto;
 
 }
 
@@ -61,7 +63,19 @@ a {
 
 }
 
-/* ------------產品下拉是選單------------- */
+/* ------------banner 倫播圖------------- */
+.owl-carousel{
+	
+
+
+}
+.item22{
+
+	
+
+
+	
+}
 
 
 
@@ -89,6 +103,19 @@ h1 {
 	margin: 50px auto;
 
 }
+/* -------  main 中間內文區域 -------   */
+
+.main{
+	margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: 1920px;
+}
+
+
+
+
+
 
 
 
@@ -109,25 +136,11 @@ h1 {
 
 }
 
-.new-arrival {}
-
-.new-arrival-photo {
-	padding-bottom: 50px;
-}
-
-.new-arrival ul {
-	max-width: 1250px;
+.new-arrival {
+	width: 100%;
 	margin: 0 auto;
-	display: flex;
 }
 
-.new-arrival ul li {
-
-	margin: 0 10px;
-	flex-grow: 1;
-}
-
-.new-arrival ul li img {}
 
 .new-arrival ul li h3 {
 	font-family: 'Noto Sans TC';
@@ -147,7 +160,7 @@ h1 {
 	margin-bottom: 10px;
 }
 
-.new-arrival ul li a {
+.newproduct-button{
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	display: block;
@@ -161,15 +174,7 @@ h1 {
 	border-radius: 40px;
 	margin: 0 auto;
 	font-size: 24px;
-
 }
-.new-arrival ul li a:hover{
-
-	background-color:#0082FB;
-	color:white
-
-} 
-
 
 
 
@@ -314,22 +319,26 @@ h1 {
 	display: flex;
 }
 
-.video-3 {
+/*  -----------影片區-----------*/
+.video{
+	margin: 0 auto;
+	max-width: 1440px
+
+}
+.video-control{
 	display: flex;
 	justify-content: center;
 	margin-bottom: 50px;
-}
-
-.video-3 ul {
-	display: flex;
-	justify-content: center;
 
 }
-
-.video-3 li {
-	width: 400px;
-	margin-left: 10px;
+.video-control li{
+	margin-right: 10px;
+	width: 100%;
 }
+  
+
+
+
 
 
 .bi-arrow-up-circle {
@@ -346,13 +355,20 @@ h1 {
 .container_footer {
 	background-color: #0082FB;
 	margin: 0 auto;
+	height: 100%;
+	width: 100%;
+	
+}
+
+.footer-area{
+	width: 1440px;
+	margin: 0 auto;
+	padding: 10px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	height: 345px;
+
 }
-
-
 
 .info-right ul {
 	display: flex;
@@ -552,7 +568,7 @@ h1 {
 
 
 
-/* ---------------找商品右邊9張圖片--------- */
+/* ---------------找商品區大範圍 --------- */
 
 
 
@@ -605,27 +621,24 @@ h1 {
 
 .product-card{
 	overflow: hidden;
-
 }
 
 .product-card img{
 	transition: 0.6s;
 	
-	
-
 }
 
 .product-card img:hover{
 	transform: scale(1.1);
-	
 }
 
-.search {
-	width: 80px;
-}
 
+
+
+
+/* --------------    找產品圖右邊9張 商品圖範圍 ----------------- */
 .product-set {
-	max-width: 1000px;
+	width: 1000px;
 	margin: 0 auto;
 
 }
@@ -652,16 +665,25 @@ h1 {
 .product-set li h3{
 	margin: 5px 0;
 }
-.product-set li p {
-	color: #0082FB;
-	font-size: 24px;
-}
 
 
 .product-set img {
 	width: 100%;
 }
 
+/* --------------    產品圖下方價錢及icon ----------------- */
+
+.pd-card-bottom{
+	font-size: 24px;
+	display: flex;
+    justify-content:space-around;
+    padding: 10px 0px 0 0px;
+    border-top: #f6f6f6 1px solid;
+    color:#0082FB;
+}
+
+
+/* --------------    產品區 下方分頁1.2.3.編輯----------------- */
 
 .page-main {
 	width: 100%;
@@ -905,6 +927,13 @@ textarea {
 	margin-top: 10px;
 }
 
+.small img{
+	width: 70px;
+	display: block;
+
+	
+}
+
 .pf-righttext {
 	width: 100%;
 	display: flex;
@@ -1055,44 +1084,122 @@ textarea {
 	margin-bottom: 30px;
 }
 
-.rel-bottom {
-	max-width: 1300px;
+.banner-bestSeller {
+	max-width: 1440px;
 	margin: 0 auto;
 }
 
-.rel-bottom h1 {}
+.banner-bestSeller h1 {}
 
-.rel-bottom ul {
+.banner-bestSeller ul {
 	display: flex;
 	justify-content: center;
 }
 
-.rel-bottom li {
+.banner-bestSeller li {
 	flex: auto;
 }
 
-.rel-bottom li a {
+.banner-bestSeller li a {
 	text-decoration: none;
 
 }
 
-.rel-bottom li h3 {
+.banner-bestSeller li h3 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 16px;
 
 }
 
-.rel-bottom li h4 {
+.banner-bestSeller li h4 {
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 14px;
 
 }
 
-.rel-bottom li p {
+.banner-bestSeller li p {
 	color: #0082FB;
 	font-family: 'Noto Sans TC';
 	font-style: normal;
 	font-size: 16px;
 }
+
+/* ------------彈出加入購物車--------- */
+.banner-product-bestSeller-one{
+	position: relative;
+}
+
+.banner-product-bestSeller-one:hover img{
+	opacity: 0.4;
+   
+}
+.banner-product-bestSeller-one:hover .banner-product-bestSeller-middle{
+	opacity: 1;
+}
+
+main .banner-product-bestSeller-middle{
+    margin-bottom: 10px;
+}
+
+.banner-product-bestSeller-middle a{
+	background-color:#0082FB;
+    color: white;
+    font-size: 16px;
+    width: 150px;
+    line-height: 2;
+    display: block;
+}
+
+main .banner-product-bestSeller-middle a i{
+    
+}
+
+.banner-product-bestSeller-middle{
+	transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+
+
+}
+.banner-product-bestSeller img{
+    display: block;
+    opacity: 1;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+
+
+
+.banner-product-bestSeller{
+	display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    padding: 4px;
+    flex: 4;
+    overflow: hidden;
+
+}
+	
+.banner-product-bestSeller li{
+	border: 1px solid #D9D9D9;
+    width: 250px;
+  
+	
+
+}
+
+
+
+
+
+
