--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
 }
 
 .top {
-	max-width: 1440px;
+	max-width: 1400px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -67,7 +67,7 @@ a {
 /* ------------banner 倫播圖------------- */
 .owl-carousel {}
 
-.item22 {}
+
 
 
 
@@ -103,13 +103,14 @@ h1 {
 	width: 100%;
 	height: 100%;
 	max-width: 1920px;
+	box-sizing: border-box;
 }
 
 
 
 /* -------  優惠活動  -------   */
 .promo-banner {
-	width: 1440px;
+	width: 1400px;
 	display: flex;
 	margin: 0 auto;
 }
@@ -175,13 +176,233 @@ h1 {
 	margin: 0 auto;
 	font-size: 24px;
 }
+/*  -----------  熱賣商品grid -----------  */
+
+.wrapper-best{
+	width: 1400px;
+	margin: 0 auto;
+	background-color: white;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	
+
+}
+.wrapper-best > div{
+	display: flex;
+	text-align: center;
+	justify-content: center;
+}
+/* .wrapper-best > div */
+
+.item1{
+	grid-column:  1 / 2;
+	grid-row: 1 / 2;
+	border-top: 1px solid #D9D9D9;
+	border-left: 1px solid #D9D9D9;
+	
+}
+.item2{
+	grid-column:  1 / 2;
+	grid-row: 2 / 3;
+	border-left: 1px solid #D9D9D9;
+	border-bottom: 1px solid #D9D9D9;
+	
+}
+
+.item-small{
+	grid-column:  2 / 3;
+	grid-row: 1/ 2;
+	border-top: 1px solid #D9D9D9;
+
+}
+.item-small ul{
+	display: flex;
+	flex-wrap: wrap;
+
+}
+.item-small li{
+	width: 50%;
+	display: block;
+	margin:auto;
+
+}
+
+
+.item img{
+	display: block;
+	margin:auto;
+	width: 100%;
+	
+}
+
+
+.item img:hover{
+	transform: scale(1.1);
+	transition: all 0.6s;
+}
+
+.item.item-small img{
+	width: 50px;
+	
+}
+
+.item.item-text h2{
+	font-size: 24px ;
+	margin: auto;
+
+	line-height: 70px;
+
+}
+.item.item-alink a{
+	margin: auto;
+	font-size: 24px;
+	display: block;
+	width: 150px;
+	background-color: #0082FB;
+	color: aliceblue;
+	border-radius: 40px;
+	text-decoration: none;
+	line-height: 50px;
+}
+
+/* ---------------熱賣商品按鈕變色--------- */
+.item.item-alink a:hover{
+	color: #0082FB;
+	background-color: aqua;
+
+}
+
+.item a{
+	
+	font-size: 20px;
+	line-height: 50px;
+	text-decoration: none;
+	
+	
+	
+}
+
+.item{
+	text-align: center;
+	overflow: hidden;
+	
+	
+}
+
+
+.item4{
+	grid-column:  2 / 3;
+	grid-row: 2/ 3;
+	
+}
+.item5{
+	grid-column:  3 / 4;
+	grid-row: 1/ 2;
+	border: 1px solid #D9D9D9;
+
+}
+.item6{
+	grid-column:  4/ 5;
+	grid-row: 1/ 2;
+	border: 1px solid #D9D9D9;
+}
+.item7{
+	grid-column:  5/ 6;
+	grid-row: 1/ 2;
+	border: 1px solid #D9D9D9;
+}
+.item8{
+	grid-column:  3/ 4;
+	grid-row: 2/ 3;
+	border: 1px solid #D9D9D9;
+}
+.item9{
+	grid-column:  4/ 5;
+	grid-row: 2/ 3;
+	border: 1px solid #D9D9D9;
+}
+.item10{
+	grid-column:  5/ 6;
+	grid-row: 2/ 3;
+	border: 1px solid #D9D9D9;
+}
+.item11{
+	grid-column:  1/ 2;
+	grid-row: 3/ 4;
+	border-left: 1px solid #D9D9D9;
+}
+.item12{
+	grid-column:  1/ 2;
+	grid-row: 4/ 5;
+	border-bottom: 1px solid #D9D9D9;
+	border-left: 1px solid #D9D9D9;
+	
+}
+.item13{
+	grid-column:  2/ 3;
+	grid-row: 3/ 4;
+}
+.item13 ul {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.item13 li {
+	width: 50%;
+}
+.item14{
+	grid-column:  2/ 3;
+	grid-row: 4/ 5;
+	border-bottom: 1px solid #D9D9D9;
+}
+.item15{
+	grid-column:  3/ 4;
+	grid-row: 3/ 4;
+	border: 1px solid #D9D9D9;
+
+}
+.item16{
+	grid-column:  4/ 5;
+	grid-row: 3/ 4;
+	border: 1px solid #D9D9D9;
+
+}
+.item17{
+	grid-column:  5/ 6;
+	grid-row: 3/ 4;
+	border: 1px solid #D9D9D9;
+
+}
+.item18{
+	grid-column:  3/ 4;
+	grid-row: 4/ 5;
+	border: 1px solid #D9D9D9;
+
+}
+.item19{
+	grid-column:  4/ 5;
+	grid-row: 4/ 5;
+	border: 1px solid #D9D9D9;
+
+}
+.item20{
+	grid-column:  5/ 6;
+	grid-row: 4/ 5;
+	border: 1px solid #D9D9D9;
+
+}
+
+
+
+
 
 
 
 /*  -----------  熱賣商品 -----------  */
 
 
-.bestseller-top {
+/* .bestseller-top {
 
 	width: 1202px;
 	margin: 0 auto;
@@ -219,12 +440,12 @@ h1 {
 
 .photo-top h3 {
 	font-size: 24px;
-}
+} */
 
 
 
 /* ---- 4個icon區域 ---- */
-.photo-top1 {
+/* .photo-top1 {
 
 	padding: 40px;
 
@@ -261,20 +482,20 @@ h1 {
 	margin-top: 68px;
 	line-height: 50px;
 
-}
+} */
 
-.photo-top1 a:hover {
+/* .photo-top1 a:hover {
 	color: #0082FB;
 	background-color: aqua;
-}
+} */
 
 
-.photo-top ul li {}
+/* .photo-top ul li {} */
 
 
 
 /*  -----------右邊熱賣6張小圖區-----------*/
-.wrapper-right {
+/* .wrapper-right {
 
 	flex-grow: 1;
 	width: 650px;
@@ -318,12 +539,12 @@ h1 {
 	width: 1202px;
 	margin: 0 auto;
 	display: flex;
-}
+} */
 
 /*  -----------影片區-----------*/
 .video {
 	margin: 0 auto;
-	max-width: 1440px
+	max-width: 1400px
 }
 
 .video-control {
@@ -334,10 +555,6 @@ h1 {
 }
 
 .video-control li {}
-
-
-
-
 
 
 .bi-arrow-up-circle {
@@ -360,11 +577,11 @@ h1 {
 }
 
 .footer-area {
-	width: 1440px;
+	width: 1400px;
 	margin: 0 auto;
 	padding: 10px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 
 }
@@ -932,7 +1149,6 @@ textarea {
 	width: 70px;
 	display: block;
 
-
 }
 
 .pf-righttext {
@@ -993,7 +1209,6 @@ textarea {
 }
 
 
-
 .buttom-1 {
 	margin-bottom: 10px;
 }
@@ -1052,7 +1267,6 @@ textarea {
 }
 
 .bottom-2 a:hover {
-
 	background-color: #86f7ff;
 	color: #0082FB;
 
