--- a/css/style.css
+++ b/css/style.css
@@ -16,138 +16,6 @@ h1 {
 }
 
 
-/* a {
-	color: black;
-} */
-/*          頭       */
-
-/* .header{
-	width: 100%;
-	height: 100px;
-	background-color: white;
-	position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-	z-index: 2;
-	box-shadow: 0 0.25rem 0.75rem rgba(2, 32, 56, 0.24);
-}
-
-.header-wrapper{
-	max-width: 1440px;
-	margin: 0 auto;
-	display: flex;
-}
-
-.logo-a{
-	display: block;
-	width: 90px;
-	margin-left: 50px;
-}
-.logo{
-	width: 150%;
-	margin-top: 35px;
-}
-
-/* 
-img{
-	display: block;
-	width: 100%;
-} */
-
-/* .nav{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-left: 330px;
-	margin-top: 25px;
-}
-.nav-ul{
-	display: flex;
-}
-.nav-ul li{
-	margin: 0 20px;
-}
-
-.nav li a{
-	font-size: 20px;
-
-}
-
-.nav-item{
-
-	position: relative;
-} */
-
-
-
-/* .nav-item:hover.nav-item::after{
-    width: 100%;
-} */
-
-/* .nav a{
-    display: block;
-    text-align: center;
-    line-height: 50px;
-    text-decoration: none;
-    color: black;
-	transition: color .4s ease-in;
-    position: relative;
-    font-size: 20px;
-}
-
-.nav a:hover{
-    color:#00a9e0;
-} */
-
-/* .nav-item:hover .second_nav{
-    display: block;
-} */
-
-
-/* .top-icon{
-    display: flex;
-}
-.top-icon{
-    margin-left: 30px;
-}
-.top-icon a{
-    color:#0078E9;
-}
-
-.top-icon a:hover{
-    color: #00a9e0;
-}
-
-.hamBar_wrapper{
-    display: none;
-    width: 44px;
-    height: 44px;
-    align-items: center;
-    justify-content: center;
-}
-
-.hamBar{
-    display: block;
-    color:#0082FB;
-} */ 
-
-
-
-/* ------------banner 倫播圖------------- */
-/* .owl-carousel {}
-
-
-
-
- */
-
-
-/* ------------右上3個ICON 修改------------- */
-/* .btn-default {
-	display: inline-block;
-	color: #0082FB;
-} */
 
 /*  -------------- banner主圖   --------  */
 .wrapper a img {
@@ -155,8 +23,16 @@ img{
 	margin: 0 auto;
 	margin-bottom: 50px;
 }
+/*  -------------- banner主圖 rwd   --------  */
 
+@media screen and (max-width: 415px){
 
+	.banner img{
+		height: 200px;
+		
+	}
+	
+}
 
 
 /* -------  main 中間內文區域 -------   */
@@ -201,7 +77,9 @@ img{
 @media screen and (max-width: 415px){
 
 .promo-banner{
-	width: 100%;
+	width: 95%;
+	display: flex;
+    flex-direction: column;
 }
 
 }
@@ -473,8 +351,8 @@ img{
 
 .wrapper-best{
 	display: block;
-	
-	
+		
+
 }
 
 .item.item-alink a{
@@ -487,154 +365,6 @@ img{
 }
 
 
-
-
-
-
-
-
-
-/*  -----------  熱賣商品 -----------  */
-
-
-/* .bestseller-top {
-
-	width: 1202px;
-	margin: 0 auto;
-	display: flex;
-}
-
-.wrapper-left {
-
-	width: 513px;
-	height: 476px;
-	display: flex;
-	flex-grow: 1;
-	background: #FFFFFF;
-	border: 1px solid #D9D9D9;
-
-}
-
-.photo-top {}
-
-.photo-top ul {
-	text-align: center;
-	margin: 0 auto;
-}
-
-.photo-top img {
-	width: 268px;
-	margin: 15px;
-}
-
-.photo-top h2 {
-	font-size: 24px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-.photo-top h3 {
-	font-size: 24px;
-} */
-
-
-
-/* ---- 4個icon區域 ---- */
-/* .photo-top1 {
-
-	padding: 40px;
-
-}
-
-.photo-top1 ul {
-	flex-wrap: wrap;
-	display: flex;
-	text-align: center;
-	justify-content: space-evenly;
-	align-items: center;
-	margin-top: 60px;
-}
-
-.photo-top1 li {
-	margin: 4px;
-}
-
-.photo-top1 p {
-	font-size: 16px;
-}
-
-.photo-top1 img {}
-
-.photo-top1 a {
-	font-size: 24px;
-	display: block;
-	width: 150px;
-	text-align: center;
-	background-color: #0082FB;
-	color: aliceblue;
-	border-radius: 40px;
-	text-decoration: none;
-	margin-top: 68px;
-	line-height: 50px;
-
-} */
-
-/* .photo-top1 a:hover {
-	color: #0082FB;
-	background-color: aqua;
-} */
-
-
-/* .photo-top ul li {} */
-
-
-
-/*  -----------右邊熱賣6張小圖區-----------*/
-/* .wrapper-right {
-
-	flex-grow: 1;
-	width: 650px;
-}
-
-
-.wrapper-right ul {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-
-}
-
-.wrapper-right li {
-	background-color: white;
-	border: 1px solid #D9D9D9;
-
-	width: 200px;
-	height: 230px;
-	margin-bottom: 15px
-}
-
-.wrapper-right li a {
-	text-decoration: none;
-}
-
-
-.wrapper-right li h3 {
-	font-size: 20px;
-	margin: 5px 5px;
-}
-
-
-.wrapper-right li p {
-	font-size: 24px;
-	color: #0082FB;
-	margin: 5px 5px;
-}
-
-.bestseller-down {
-	width: 1202px;
-	margin: 0 auto;
-	display: flex;
-} */
 
 /*  -----------影片區-----------*/
 .video {
@@ -684,132 +414,7 @@ img{
 
 }
 
-/* -----------footer尾-------------- */
 
-/* .container_footer {
-	background-color: #0082FB;
-	margin: 0 auto;
-	height: 100%;
-	width: 100%;
-
-}
-
-.footer-area {
-	width: 1400px;
-	margin: 0 auto;
-	padding: 10px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-
-}
-
-.info-right ul {
-	display: flex;
-	justify-content: space-around;
-
-}
-
-
-.logo-container ul {
-	line-height: 2;
-
-}
-
-.logo-container img {
-	margin-bottom: 30px;
-	height: 60px;
-}
-
-.logo-container li {}
-
-.container_footer .logo-container a {
-	color: white;
-	font-size: 16px;
-	font-family: 'Noto Sans TC';
-	font-style: normal;
-	margin-left: 10px;
-	text-decoration: none;
-
-} */
-
-
-
-/* ---------------footer-icon修改--------- */
-/* .btn1 i {
-	display: block;
-	color: white;
-
-}
-
-.btn1>::before {
-	margin-right: 5px;
-} */
-
-
-/* ---------------關於我們-icon修改--------- */
-/* .btn2 {
-	display: flex;
-
-
-}
-
-.btn2 h3 {
-	margin-left: 10px;
-}
-
-.info-right img {
-	width: 140px;
-	margin-top: 20px;
-}
-
-.info-right ul {
-	display: flex;
-	margin-top: 45px;
-
-}
-
-.info-right li {
-	margin-right: 40px;
-}
-
-.info-right li a {
-	text-decoration: none;
-
-}
-
-
-.info-right li h2 {
-	color: white;
-	font-size: 24px;
-	font-family: 'Noto Sans TC';
-	font-style: normal;
-	border-bottom: 1px solid white;
-	margin-bottom: 20px;
-	text-decoration: none;
-}
-
-.info-right li h3 {
-	color: white;
-	font-size: 16px;
-	font-family: 'Noto Sans TC';
-	font-style: normal;
-	margin: 5px auto;
-}
-
-.ref {
-	background-color: #092C4C;
-	text-align: center;
-	padding: 0.75rem 0;
-}
-
-.ref p {
-	color: white;
-	font-family: 'Noto Sans TC';
-	font-style: normal;
-	font-size: 12px;
-
-} */
 
 /* ---------------優惠活動分頁--------- */
 .wrapper-promo {}
@@ -896,9 +501,28 @@ img{
 	line-height: 30px;
 
 }
+/* ---------------優惠活動rwd --------- */
 
 
+@media screen and (max-width: 415px){
 
+	.promo-main{
+		width: 100%;
+	}
+	.promo-in{
+		width: 100%;
+
+	}
+
+
+	.promo-in ul {
+		width: 100%;
+	   display: flex;
+	   flex-direction: column;
+
+	}
+   
+   }
 
 
 /* ---------------找商品區大範圍 --------- */
@@ -965,8 +589,6 @@ img{
 .product-card img:hover {
 	transform: scale(1.1);
 }
-
-
 
 
 
@@ -1042,7 +664,39 @@ img{
 	border-radius: 5px;
 }
 
+/* ---------------找商品區rwd  --------- */
 
+@media screen and (max-width: 415px){
+	.product-container{
+		width: 100%;
+		display: flex;
+    	flex-direction: column;
+	}
+	.label-3{
+		margin-left: 18px;
+	}
+	.product-list{
+		flex-direction: column;
+	}
+
+	.side-pd{
+		padding: 0 20px;
+	}
+
+	.product-set {
+		margin-top: 20px;
+		width: 100%;
+	}
+	.product-set ul{
+		display: flex;
+    	flex-wrap: wrap;
+	}
+	.product-set li{
+		width: 41%;
+	}
+
+
+}
 
 
 /* ---------------購物說明--------- */
@@ -1089,7 +743,7 @@ img{
 }
 
 .info-bottomline {
-	width: 935px;
+	width: 100%;
 	border-bottom: 1px solid black;
 }
 
@@ -1107,10 +761,23 @@ img{
 	color: #7F7F7F;
 
 }
+/* ---------------購物說明rwd--------- */
+
+@media screen and (max-width: 415px){
+	.info-set{
+		width: 100%;
+	}
+	.info-set ul{
+		padding: 0px 15px;
+	}
+
+
+}
 
 
 
-/* ---------------門市據點--------- */
+
+/* ---------------聯絡我們區--------- */
 
 
 .loc-main {
@@ -1125,15 +792,14 @@ img{
 /* -------------地圖區域--------- */
 
 .map-top {
-	margin: 0 auto;
+	padding: 0 38px;
+    height: 300px;
 }
 
 .map-top iframe {
-	width: 800px;
-	margin: 0 200px;
-
+	width: 100%;
+	
 }
-
 
 
 /* -------------關於我們下半部--------- */
@@ -1141,14 +807,13 @@ img{
 .info-down {
 	display: flex;
 	justify-content: space-around;
-	padding: 0 30px;
-	margin: 50px 50px;
+	margin: 50px 0;
 
 }
 
 
 .down-border {
-	width: 400px;
+	width: 100%;
 	border-bottom: 1px solid black;
 	margin-bottom: 20px;
 
@@ -1194,9 +859,9 @@ img{
 
 .info-downleft li {}
 
-.info-downleft li a {
+.btn-b{
 	font-size: 16px;
-	display: block;
+	display: inline-block;
 	width: 100%;
 	background-color: #0082FB;
 	color: aliceblue;
@@ -1204,12 +869,18 @@ img{
 	margin-top: 10px;
 	text-align: center;
 	border-radius: 10px;
+	border: none;
 
+}
+
+.btn-b:hover{
+	background-color: #00EBE3;
+	color: #007470;
 }
 
 
 .down-border1 {
-	width: 600px;
+	width: 100%;
 	border-bottom: 1px solid black;
 	margin-bottom: 20px;
 
@@ -1217,11 +888,13 @@ img{
 
 .info-downleft textarea {
 	width: 100%;
+	box-sizing: border-box;
 
 }
 
 input {
 	width: 100%;
+	box-sizing: border-box;
 }
 
 
@@ -1232,6 +905,37 @@ textarea {
 	margin: 0;
 
 }
+
+/* ---------------聯絡我們區rwd--------- */
+@media screen and (max-width: 415px){
+
+	.loc-main{
+		width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: column;
+	}
+	.map-top{
+		box-sizing: border-box;
+		padding: 0px 20px;
+
+	}
+	.info-downleft{
+		width: 100%;
+		margin: 0;
+	}
+	.info-downleft ul{
+		width: 100%;
+		padding: 16px;
+    	box-sizing: border-box;
+	}
+
+	.info-downright ul{
+		display: none;
+	}
+
+}
+
 
 
 /* ---------------商品內文區--------- */
@@ -1246,6 +950,8 @@ textarea {
 	width: 1200px;
 	margin: 40px auto;
 	display: flex;
+	box-sizing: border-box;
+    padding: 0 20px;
 }
 
 .pd-leftimg {
@@ -1277,8 +983,7 @@ textarea {
 }
 
 .right-info-name {
-	border-bottom: 1px solid black;
-	width: 560px;
+	width: 100%;
 	height: auto;
 }
 
@@ -1311,42 +1016,110 @@ textarea {
 
 }
 
-.buttom-1 a {
-	font-size: 16px;
-	display: block;
-	width: 80px;
-	border: 1px solid black;
-	color: black;
+/* ---------------購物車顏色按鈕--------- */
+
+#radio{
+	margin-left: 22px;
+    margin-top: 20px;
+
+}
+
+#radio input[type="radio"] {
+	display: none; 
+}
+
+#radio input:checked + .button {
+	background: #0082FB; 
+	color: #fff; 
+	cursor: default; 
+}
+
+#radio .button {
+	display: inline-block; 
+	margin: 0 5px 0px 10px; 
+	padding: 5px 10px;  
+	cursor: pointer; 
+	border: 1px solid #999;
+}
+
+#radio .button:hover {
+	background: #bbb; 
+	color: #fff; 
+}
+
+#radio .round {
+	border-radius: 5px; 
+}
+
+/* ---------------購物車數量加減--------- */
+
+
+ul,
+li {
+	list-style: none;
+}
+
+a {
 	text-decoration: none;
-	margin-top: 10px;
+}
+
+a:hover {
+	cursor: pointer;
+	text-decoration: none;
+}
+
+a:link {
+	text-decoration: none;
+}
+
+img {
+	vertical-align: middle;
+}
+
+.btn-numbox {
+	overflow: hidden;
+	margin: 20px auto;
+}
+
+.btn-numbox li {
+	float: left;
+	margin-left: 24px;
+}
+
+
+.btn-numbox .count {
+	overflow: hidden;
+	margin: 0 16px 0 -20px;
+}
+
+
+.btn-numbox .count .num-jian,
+.input-num,
+.num-jia {
+	display: inline-block;
+	width: 28px;
+	height: 28px;
+	line-height: 28px;
 	text-align: center;
+	font-size: 18px;
+	color: #999;
+	cursor: pointer;
+	border: 1px solid #e6e6e6;
 }
 
-.buttom-1 a:hover {
-	color: white;
-	background-color: #0082FB;
+.btn-numbox .count .num-jia {
+	margin-left: 1px;
 }
 
-
-.buttom-1 {
-	margin-bottom: 10px;
+.btn-numbox .count .input-num {
+	width: 58px;
+	height: 26px;
+	color: #333;
+	border-left: 0;
+	border-right: 0;
 }
 
-.add {
-	width: 100px;
-	margin-bottom: 10px;
-}
-
-.add a {
-	border: 1px solid black;
-	padding: 0 12px;
-	text-decoration: none;
-}
-
-.add span {
-	margin: 0 8px;
-}
-
+/* ---------------購物車立即購買&加入購物車按鈕--------- */
 
 .bottom-2 {}
 
@@ -1361,7 +1134,7 @@ textarea {
 }
 
 .buy-button {
-	font-size: 25px;
+	font-size: 1.4rem;;
 	display: block;
 	width: 200px;
 	background-color: #0082FB;
@@ -1370,10 +1143,11 @@ textarea {
 	margin-top: 10px;
 	text-align: center;
 	border-radius: 20px;
+	padding: 5px;
 }
 
 .add-cartbutton {
-	font-size: 25px;
+	font-size: 1.4rem;;
 	text-align: center;
 	display: block;
 	width: 200px;
@@ -1382,6 +1156,7 @@ textarea {
 	border: 1px solid #0082FB;
 	border-radius: 20px;
 	margin-top: 10px;
+	padding: 5px;
 
 }
 
@@ -1394,6 +1169,7 @@ textarea {
 .pd-downcontainer {
 	text-align: center;
 	margin-bottom: 50px;
+	padding: 0 20px;
 
 }
 
@@ -1421,6 +1197,10 @@ textarea {
 	line-height: 35px;
 	margin-bottom: 30px;
 }
+
+
+/* ---------------推薦商品區--------- */
+
 
 .banner-bestSeller {
 	max-width: 1440px;
@@ -1465,6 +1245,7 @@ textarea {
 }
 
 /* ------------彈出加入購物車--------- */
+
 .banner-product-bestSeller-one {
 	position: relative;
 }
@@ -1503,7 +1284,6 @@ main .banner-product-bestSeller-middle a i {}
 	-ms-transform: translate(-50%, -50%);
 	text-align: center;
 
-
 }
 
 .banner-product-bestSeller img {
@@ -1514,8 +1294,6 @@ main .banner-product-bestSeller-middle a i {}
 	transition: .5s ease;
 	backface-visibility: hidden;
 }
-
-
 
 
 .banner-product-bestSeller {
@@ -1532,135 +1310,127 @@ main .banner-product-bestSeller-middle a i {}
 	border: 1px solid #D9D9D9;
 	width: 250px;
 
-
-
 }
 
+/* ---------------商品內文區 rwd --------- */
 
-/* ------------media--------- */
+@media screen and (max-width: 418px){
 
-/* @media screen and (max-width: 415px){
+	.pdinfo-container{
+		width: 100%;
 
-	.header{
-        max-width: 414px;
-        width: 100%;
-        position: sticky;
-		top: 0px;
-		z-index: 1000;
-        height: 65px;
-		background-color: rgba(255, 255, 255, 0.9);
-    }
-	.header-wrapper{
-        max-width: 414px;
-        width: 100%;
-        margin: 0 auto;
-        justify-content: space-between;
-		
-    }
+	}
+	.pd-topcontainer{
+		width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: column;
 
-	.logo-a{
-        width: 50px;
-    }
+	}
 
-    .logo{
-        margin-top: 22px;
-    }
-
-	.hamBar_wrapper{
-        display: block;
-        max-width: 20px;
-        align-items: center;
-        padding-right: 20px;
-        padding-top: 20px;
-    } 
-
-	.nav{
-        display: none;
-        display: flex;
-        opacity: 0;
-        margin: auto;
-        position: absolute;
-        top: 65px;
-        width: 100%;
-        background-color:#0082FB;
-        pointer-events: none;
-        transition: opacity 0.3s ease-in;
-    }
-
-	/* .nav_show{
-        opacity: 1;
-        transition: opacity 0.5s ease-in;
-		pointer-events: auto;
-    }
-	.nav-ul{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        align-items: center;
-    }
-
-	.nav li a{
-        font-size: 15px;
-		color: #FFFFFF;
-    }
+	.buy-button{
+		width: 100%;
+	} 
+	.pd-downcontainer img{
+		width: 100%;
+	}
 
 
-    .top-icon{
-        margin: auto;
-    }
-
-	.nav-item::after{
-        display: none;
-    }
-
-
-
-
-/* ------------footer--------- */
-
-/* .footer-area{
-	width: 100%;
-	flex-direction: column;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.logo-container{
-	width: 100%;
-	font-size: 20px;
+	.banner-bestSeller{
+		/* display: none; */
+		width: 100%;
+		max-width: 414px;
+		margin: 0;
+	}
+	
+	.banner-bestSeller h2{
+		text-align: center;
+		font-size: 20px;
+		color: black;
+		margin: 0px auto 10px;
+		font-weight: bold;
+		letter-spacing: 2px;
+	}
+	
+	.banner-bestSeller-select{
+		padding-right: 8px;
+	}
+	
+	.banner-product-bestSeller{
+		display: flex;
+		max-width: 380px;
+		margin: 0 auto;
+		flex-flow: row wrap;
+		justify-content: space-between;
+		padding: 0px;
+		overflow: hidden;
+	}
+	
+	
+	.banner-product-bestSeller li{
+		max-width: 180px;
+		padding: 0px;
+		margin: 10px 0px;
+	}
+	
+	
+	.banner-product-bestSeller a{
+		text-decoration: none;
+	}
+	
+	.banner-product-bestSeller img{
+		width: 100%;
+		max-width: 180px;
+		display: block;
+		opacity: 1;
+		height: auto;
+		transition: .5s ease;
+		backface-visibility: hidden;
+	}
+	
+	
+	.banner-product-bestSeller-one:hover img{
+		opacity: 1;
+		background-color: black;
+	}
+	
+	.banner-product-bestSeller-one:hover .banner-product-bestSeller-middle{
+		opacity: 1;
+	}
+	
+	.banner-product-bestSeller-middle{
+		transition: .5s ease;
+		opacity: 0;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(15%, -10%);
+		-ms-transform: translate(-0%, -0%);
+		text-align: center;
+	}
+	
+	.banner-product-bestSeller-middle a{
+		background-color: #0082FB;
+		border-radius: 3px;
+		color: white;
+		font-size: 10px;
+		width: 130px;
+		line-height: 3;
+		margin-top: 10px;
+	}
+	.banner-product-bestSeller-middle a i{
+		padding-right: 5px; 
+	}
+	
+	.banner-product-bestSeller-middle{
+		transition: .5s ease;
+		opacity: 1;
+		position: static;
+	}
+	
+	
 	
 }
-
-
-.info-right {
-	width: 100%;
-	
-}
-
-
-.info-right ul{
-	flex-direction: column;
-	
-}
-
-
-.info-right li h2 {
-	font-size: 30px;
-}
-
-
-.info-right li h3{
-	font-size: 20px;
-}
-
-.ref{
-	width: 100%;
-} */
-
- 
-	
-/* } */
-
 
 
 
