--- a/css/header&footer.css
+++ b/css/header&footer.css
@@ -27,17 +27,12 @@
 	margin-top: 35px;
 }
 
-/* 
-img{
-	display: block;
-	width: 100%;
-} */
 
 .nav{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-left: 330px;
+	margin-left: 354px;
 	margin-top: 25px;
 }
 .nav-ul{
@@ -59,14 +54,10 @@ img{
 
 
 
-/* .nav-item:hover.nav-item::after{
-    width: 100%;
-} */
-
 .nav a{
     display: block;
     text-align: center;
-    line-height: 50px;
+    
     text-decoration: none;
     color: black;
 	transition: color .4s ease-in;
@@ -78,24 +69,7 @@ img{
     color:#00a9e0;
 }
 
-/* .nav-item:hover .second_nav{
-    display: block;
-} */
 
-
-.top-icon{
-    display: flex;
-}
-.top-icon{
-    margin-left: 30px;
-}
-.top-icon a{
-    color:#0078E9;
-}
-
-.top-icon a:hover{
-    color: #00a9e0;
-}
 
 .hamBar_wrapper{
     display: none;
@@ -111,13 +85,116 @@ img{
 }
 
 
+/* ----------產品下拉是選單展開------------- */
+
+
+.hn-list-model {
+	display: flex;
+	justify-content: space-evenly;
+  }
+  
+  .hn-list-item {
+	position: absolute;
+	background-color:aliceblue;
+	left: -45px;
+	top: 30px;
+	display: none;
+	padding: 0 10px;
+	z-index: 1;
+  }
+  
+  .hn-list-item li {
+	white-space: nowrap;
+	width: 90px;
+	/* width: 10vw; */
+  }
+  
+  .hn-list-model-item li a {
+	line-height: 40px;
+	/* font-size: 14px; */
+	font-size: 0.9rem;
+  }
+  
+  
+  /* ----------hover---------- */
+  .nav-ul > li:hover > .hn-list-item  {
+	display: block;
+	/* visibility: visible; */
+  }
+
+
+
+
+
+/* ----------- search 展開------------- */
+
+.hn-function {
+	margin-left: auto;
+	margin-top: 20px;
+	width: 440px;
+    flex-basis: 150px;
+	display: flex;
+	justify-content:  flex-end;
+	align-items: center;
+	
+  }
+  
+  .hn-function li {
+	margin: 0 15px;
+  }
+ 
+  
+ .hn-function i{
+	font-size: 20px;
+	color: #0082FB;
+ } 
+ .hn-function i:hover{
+	color:aquamarine;
+ } 
+  
+  
+  .desktop-search {
+	display: flex;
+  }
+
+.desktop-search input {
+
+	width: 0;
+	outline: none;
+	border: 0;
+	opacity: 1;
+	transition: all 0.8s;
+  }
+  
+  .desktop-search button {
+	background: none;
+	border: none;
+	outline: none;
+	
+  }
+  
+  .desktop-search:hover input {
+	display: block;
+	width: 120px;
+	border-bottom: 1px solid #666;
+  }
+  
+  
+  
+
 
 /* ------------右上3個ICON 修改------------- */
-.btn-default {
-	display: inline-block;
-	color: #0082FB;
-}
 
+.bi-search::before{
+	margin-top: 9px;
+} 
+.bi-cart::before{
+	margin-top: 10px;
+}
+.bi-person::before{
+	font-size: 22px;
+    margin-top: 12px;
+}
 
 /* -----------footer-------------- */
 
@@ -248,8 +325,19 @@ img{
 
 }
 
-
-
+/* ---------------gotop--------- */
+#gotop {
+	background: none;
+	font-size: 35px;
+	border: 0;
+	outline: none;
+	position: fixed;
+	right: 0px;
+	bottom: 20px;
+	color: #0078E9;
+	z-index: 100;
+	
+  }
 
 
 /* ------------media--------- */
@@ -273,6 +361,14 @@ img{
         justify-content: space-between;
 		
     }
+	.hn-function{
+		display: none;
+	}
+	  /* ----------hover---------- */
+	  .nav-ul > li:hover > .hn-list-item  {
+		display: none;
+		/* visibility: visible; */
+	  }
 
 	.logo-a{
         width: 50px;
@@ -315,16 +411,15 @@ img{
         width: 100%;
         align-items: center;
     }
+	.nav-ul li{
+		padding: 15px;
+	}
 
 	.nav li a{
         font-size: 15px;
 		color: #FFFFFF;
     }
 
-
-    .top-icon{
-        margin: auto;
-    }
 
 	.nav-item::after{
         display: none;
@@ -350,7 +445,7 @@ img{
 
 .logo-container{
 	width: 100%;
-	font-size: 20px;
+	font-size: 15px;
 	
 }
 
@@ -368,12 +463,12 @@ img{
 
 
 .info-right li h2 {
-	font-size: 30px;
+	font-size: 20px;
 }
 
 
 .info-right li h3{
-	font-size: 20px;
+	font-size: 15px;
 }
 
 .ref{
